--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,8 @@
     <string name="offline">Please check your internet connection</string>
 
     <!-- Strings related to Web Services -->
-    <string name="base_url">http://www.galvanie.com:3000/api/</string>
+    <!--<string name="base_url">http://www.galvanie.com:3000/api/</string>-->
+    <string name="base_url">http://192.168.0.102:3000/api/</string>
     <string name="connection_error">There was an error...</string>
 
     <!-- Strings related to web service authentication -->
@@ -70,14 +71,20 @@
 
     <!-- Strings related to My Account-->
     <string name="title_my_account">My Account</string>
-    <string name="username_ma">Username:</string>
+    <string name="email_ma">Email:</string>
     <string name="password_ma">Change Password</string>
-    <string name="phone_ma">Phone No:</string>
+    <string name="phone_ma">Phone:</string>
     <string name="address_ma">Vehicle Number:</string>
+    <string name="old_password_ma_cp">Enter Old Password: </string>
+    <string name="new_password_ma_cp">Enter New Password: </string>
+    <string name="edit_old_password_ma_cp">Old Password</string>
+    <string name="edit_new_password_ma_cp">New Password</string>
+    <string name="submit_change_password_ma_cp">Submit</string>
+    <string name="default_val_so">Unavailable</string>
 
     <!-- Strings related to Support-->
     <string name="call_manager_support">Call Manager</string>
-    <string name="email_manager_support">Send an email to Manager</string>
+    <string name="email_manager_support">Email Manager</string>
 
     <!-- Strings related to App Version-->
     <string name="title_app_version">Version 1.0</string>
