--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,8 +30,8 @@
     <string name="offline">Please check your internet connection</string>
 
     <!-- Strings related to Web Services -->
-    <!--<string name="base_url">http://www.galvanie.com:3000/api/</string>-->
-    <string name="base_url">http://192.168.0.102:3000/api/</string>
+    <string name="base_url">http://www.galvanie.com:3000/api/</string>
+    <!--<string name="base_url">http://192.168.0.102:3000/api/</string>-->
 
     <string name="connection_error">There was an error...</string>
 
